1. postpone 任务不会并发执行了 2. 执行截图命令不会卡死了