@@ -2,7 +2,6 @@ package com.ff.postpone.util;
 
 
 import java.io.*;
-import java.nio.charset.StandardCharsets;
 
 /**
  * 执行 系统命令
@@ -13,43 +12,36 @@ public class CmdUtil {
     /**
      * 执行系统命令, 返回执行结果
      * @param cmd 需要执行的命令
+     * @param master false 子进程执行  true 主进程执行
      */
-    public static String execCmd(String cmd) throws InterruptedException, IOException {
-        StringBuilder result = new StringBuilder();
-
+    public static String execCmd(String cmd, boolean master) throws InterruptedException, IOException {
+        StringBuilder sb = new StringBuilder();
+        BufferedReader br = null;
         Process process = null;
-        BufferedReader bufrIn = null;
-        BufferedReader bufrError = null;
         try {
-            String[] commond = {"/bin/sh","-c",cmd};
-            // 执行命令, 返回一个子进程对象（命令在子进程中执行）
-            process = Runtime.getRuntime().exec(commond);
-
-            // 方法阻塞, 等待命令执行完成（成功会返回0）
+            ProcessBuilder pb;
+            if(master){
+                pb = new ProcessBuilder(cmd);
+            }else{
+                pb = new ProcessBuilder("/bin/sh","-c",cmd);
+            }
+            pb.redirectErrorStream(true);
+            process = pb.start();
+            br = new BufferedReader(new InputStreamReader(process.getInputStream()));
+            String line;
+            while ((line = br.readLine()) != null) {
+                sb.append(line).append("\n");
+            }
             process.waitFor();
-
-            // 获取命令执行结果, 有两个结果: 正常的输出 和 错误的输出（PS: 子进程的输出就是主进程的输入）
-            bufrIn = new BufferedReader(new InputStreamReader(process.getInputStream(), StandardCharsets.UTF_8));
-            bufrError = new BufferedReader(new InputStreamReader(process.getErrorStream(), StandardCharsets.UTF_8));
-            // 读取输出
-            String line = null;
-            while ((line = bufrIn.readLine()) != null) {
-                result.append(line).append('\n');
-            }
-            while ((line = bufrError.readLine()) != null) {
-                result.append(line).append('\n');
-            }
-
         } finally {
-            closeStream(bufrIn);
-            closeStream(bufrError);
+            closeStream(br);
             // 销毁子进程
             if (process != null) {
                 process.destroy();
             }
         }
         // 返回执行结果
-        return result.toString();
+        return sb.toString();
     }
 
     /**
